objects/Rail_Report_Snapshot__c.object
<CustomObject>
    <description>custom object for Rail to store reporting snapshots</description>
    <fields>
        <fullName>Conversion_Amount__c</fullName>
        <description>stores the conversion amount summary</description>
        <label>Conversion Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <description>the fiscal year of the forecast</description>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Value_PAM_ratio__c</fullName>
        <description>value of total PAM compared to opp value</description>
        <label>Opp Value / PAM ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to Opportunty</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Rail Report Snapshots</relationshipLabel>
        <relationshipName>Rail_Report_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAM_Total__c</fullName>
        <description>the total PAM of the Tender</description>
        <label>PAM Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Amount__c</fullName>
        <description>stores the pipeline amount summary</description>
        <label>Pipeline Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <description>stores the date when the snapshot was taken</description>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to Tender</description>
        <label>Tender</label>
        <referenceTo>Tender__c</referenceTo>
        <relationshipLabel>Rail Report Snapshots</relationshipLabel>
        <relationshipName>Rail_Report_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rail Report Snapshot</label>
    <nameField>
        <label>Rail Pipe and Conv Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rail Report Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>